# CMakeSpdlog

./: .gitignore  CMakeLists.txt
CMakeSpdlog/: CMakeLists.txt  CMakeSpdlog.cpp
spdlog/: LICENSE
spdlog/src/: CMakeLists.txt
